version/0.39/_sources/api/solver/_autosummary/settings/fluid_child.rst.txt
:orphan:

.. _fluid_child:

fluid_child
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.fluid_child
    :show-inheritance:

.. rubric:: Attributes

======================================================================================   ==============================================================

Attribute                                                                                                                                       Summary

======================================================================================   ==============================================================
:ref:`name <name_15>`                                                                                                                    Material name.

:ref:`chemical_formula <chemical_formula>`                                                                                   Material chemical formula.

:ref:`density <density_3>`                                                                                                  Material property: density.

:ref:`viscosity <viscosity>`                                                                                              Material property: viscosity.

:ref:`specific_heat <specific_heat>`                                                                                  Material property: specific-heat.

:ref:`thermal_conductivity <thermal_conductivity_1>`                                                           Material property: thermal-conductivity.

:ref:`molecular_weight <molecular_weight_4>`                                                                       Material property: molecular-weight.

:ref:`premix_laminar_speed <premix_laminar_speed>`                                                             Material property: premix-laminar-speed.

:ref:`premix_critical_strain <premix_critical_strain>`                                                       Material property: premix-critical-strain.

:ref:`premix_unburnt_temp <premix_unburnt_temp>`                                                                Material property: premix-unburnt-temp.

:ref:`premix_unburnt_density <premix_unburnt_density>`                                                       Material property: premix-unburnt-density.

:ref:`premix_heat_trans_coeff <premix_heat_trans_coeff>`                                                    Material property: premix-heat-trans-coeff.

:ref:`premix_heat_of_comb <premix_heat_of_comb>`                                                                Material property: premix-heat-of-comb.

:ref:`premix_unburnt_fuel_mf <premix_unburnt_fuel_mf>`                                                       Material property: premix-unburnt-fuel-mf.

:ref:`premix_adiabatic_temp <premix_adiabatic_temp>`                                                          Material property: premix-adiabatic-temp.

:ref:`therm_exp_coeff <therm_exp_coeff>`                                                                            Material property: therm-exp-coeff.

:ref:`characteristic_vibrational_temperature <characteristic_vibrational_temperature>`       Material property: characteristic-vibrational-temperature.

:ref:`reference_diameter <reference_diameter>`                                                                   Material property: reference-diameter.

:ref:`viscosity_reference_temperature <viscosity_reference_temperature>`                            Material property: viscosity-reference-temperature.

:ref:`viscosity_temperature_index <viscosity_temperature_index>`                                        Material property: viscosity-temperature-index.

:ref:`rotational_degrees_of_freedom <rotational_degrees_of_freedom>`                                  Material property: rotational-degrees-of-freedom.

:ref:`rotational_collision_number <rotational_collision_number>`                                        Material property: rotational-collision-number.

:ref:`vibrational_collision_number <vibrational_collision_number>`                                     Material property: vibrational-collision-number.

:ref:`absorption_coefficient <absorption_coefficient>`                                                       Material property: absorption-coefficient.

:ref:`melting_heat <melting_heat>`                                                                                     Material property: melting-heat.

:ref:`tsolidus <tsolidus>`                                                                                                 Material property: tsolidus.

:ref:`tliqidus <tliqidus>`                                                                                                 Material property: tliqidus.

:ref:`liquidus_slope <liquidus_slope>`                                                                               Material property: liquidus-slope.

:ref:`partition_coeff <partition_coeff>`                                                                            Material property: partition-coeff.

:ref:`eutectic_mf <eutectic_mf>`                                                                                        Material property: eutectic-mf.

:ref:`solid_diffusion <solid_diffusion>`                                                                            Material property: solid-diffusion.

:ref:`solut_exp_coeff <solut_exp_coeff>`                                                                            Material property: solut-exp-coeff.

:ref:`scattering_coefficient <scattering_coefficient>`                                                       Material property: scattering-coefficient.

:ref:`scattering_phase_function <scattering_phase_function>`                                              Material property: scattering-phase-function.

:ref:`refractive_index <refractive_index>`                                                                         Material property: refractive-index.

:ref:`formation_entropy <formation_entropy>`                                                                      Material property: formation-entropy.

:ref:`formation_enthalpy <formation_enthalpy>`                                                                   Material property: formation-enthalpy.

:ref:`reference_temperature <reference_temperature>`                                                          Material property: reference-temperature.

:ref:`lennard_jones_length <lennard_jones_length>`                                                             Material property: lennard-jones-length.

:ref:`lennard_jones_energy <lennard_jones_energy>`                                                             Material property: lennard-jones-energy.

:ref:`thermal_accom_coefficient <thermal_accom_coefficient>`                                              Material property: thermal-accom-coefficient.

:ref:`velocity_accom_coefficient <velocity_accom_coefficient>`                                           Material property: velocity-accom-coefficient.

:ref:`degrees_of_freedom <degrees_of_freedom>`                                                                   Material property: degrees-of-freedom.

:ref:`electric_conductivity <electric_conductivity>`                                                          Material property: electric-conductivity.

:ref:`dual_electric_conductivity <dual_electric_conductivity>`                                           Material property: dual-electric-conductivity.

:ref:`lithium_diffusivity <lithium_diffusivity>`                                                                Material property: lithium-diffusivity.

:ref:`magnetic_permeability <magnetic_permeability>`                                                          Material property: magnetic-permeability.

:ref:`speed_of_sound <speed_of_sound>`                                                                               Material property: speed-of-sound.

:ref:`critical_temperature <critical_temperature>`                                                             Material property: critical-temperature.

:ref:`critical_pressure <critical_pressure>`                                                                      Material property: critical-pressure.

:ref:`critical_volume <critical_volume>`                                                                            Material property: critical-volume.

:ref:`acentric_factor <acentric_factor>`                                                                            Material property: acentric-factor.

:ref:`latent_heat <latent_heat>`                                                                                        Material property: latent-heat.

:ref:`saturation_pressure <saturation_pressure>`                                                                Material property: saturation-pressure.

:ref:`vaporization_temperature <vaporization_temperature>`                                                 Material property: vaporization-temperature.

:ref:`charge <charge>`                                                                                                       Material property: charge.

:ref:`uds_diffusivity <uds_diffusivity>`                                                                            Material property: uds-diffusivity.

======================================================================================   ==============================================================

.. rubric:: Included in:

====================   =================================================

Parent                                                           Summary

====================   =================================================
:ref:`fluid <fluid>`       Accesses the list of defined fluid materials.

====================   =================================================

